# python-project-template-api

./: .env.example  .gitignore  .markdownlintignore  .markdownlintrc  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/auth/: __init__.py  dependencies.py  models.py  schemas.py  service.py
app/cli/: __init__.py  keys.py
app/config/: settings.py
app/core/: __init__.py  exceptions.py  logging.py  middleware.py
app/db/: __init__.py  base.py  session.py
app/health/: __init__.py  router.py  schemas.py
app/items/: __init__.py  models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_auth.py  test_cli.py  test_cli_integration.py  test_health.py  test_items.py  test_middleware.py
tests/factories/: __init__.py  api_keys.py  items.py
